# basic-chatbot

./: .dockerignore  .gitignore  Dockerfile.app  README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  alembic.ini  docker-compose.yml  main.py  pega_model_est.md  pyproject.toml
.github/workflows/: ci.yml
backend/: agent_tools.py  agentic.py  app.py  config.py  db.py  logging_setup.py  openai_client.py  rag.py  token_len_hook.py
backend/agent_pipeline/: __init__.py  stages.py  types.py
backend/migrations/: README  env.py
backend/migrations/versions/: 0001_init.py
data/: faiss.index  meta.json
frontend/: index.html  main.js  styles.css
frontend-react/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend-react/app/: page.tsx
frontend-react/app/api/agent/: route.ts
frontend-react/app/api/dbinit/: route.ts
frontend-react/app/api/dbseed/: route.ts
frontend-react/app/api/ingest/: route.ts
frontend-react/components/: citation-tooltip.tsx  markdown.tsx  trace-flow.tsx
frontend-react/lib/: utils.ts
frontend-react/types/: xyflow.d.ts
mcp/docs/: Dockerfile  pyproject.toml  server.py
mcp/sql/: Dockerfile  pyproject.toml  server.py
tests/: test_basic.py
